--- a/app/src/main/res/drawable/image.xml
+++ b/app/src/main/res/drawable/image.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF"/>
-            <stroke android:color="#D3D3D3" android:width="5dp" />
+            <solid android:color="#ff0000"/>
+            <stroke android:color="#ff0000" android:width="5dp" />
             <!--corners allow us to make the rounded corners button-->
             <corners android:radius="50dp" />
         </shape>
